# github-workflow-collections

./: CMakeLists.txt
.github/workflow/: main.yml
.github/workflows/: cmake.yml
apps/: CMakeLists.txt
apps/mini_optix7/: CMakeLists.txt  cuda_common.h  renderer.cpp  renderer.cu  renderer.h  volume.cpp  volume.h
common/: configure.cmake
common/gdt/: CMakeLists.txt
common/gdt/cmake/: FindNVRTC.cmake  configure_build_type.cmake  configure_optix.cmake
common/gdt/gdt/math/: constants.h
common/gdt/gdt/math/vec/: functors.h
common/glfwapp/: CMakeLists.txt  GLFWApp.cpp  GLFWApp.h
common/tfn/: core.h  helper.h  widget.h
cuda-cmake-github-actions/scripts/actions/: install_cuda_ubuntu.sh
optix-cmake-github-actions/: install_optix.ps1  install_optix.sh
ospray-cmake-github-actions/: install_ospray_ubuntu.sh  install_ospray_windows.ps1
ospray-cmake-github-actions/scripts/actions/: install_ospray_ubuntu.sh  install_ospray_windows.ps1
torch-cmake-github-actions/: install_torch.sh
